# vs-nlm-ispc

./: .gitignore  CMakeLists.txt  README.md  hatch_build.py  pyproject.toml
.github/workflows/: linux-arm64.yml  linux.yml  macos.yml  publish.yml  wheel.yml  windows.yml
source/: nlm.ispc  vsnlm.cpp
